--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <link href='https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300,300italic,700' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
+<body>
 <div id="header">
   <h1>Recent From Blog</h1>
   <p>He can tell I ain't missing no meals. We go 0 to 100 real quick. Oh, my DM poppin. Don't you hate when you get screenshotted.</p>
@@ -10,32 +12,35 @@
 
 <main class="clearfix">
 
-  <div class="left clearfix">
-    <img src=".//img/keyboard.JPG">
+  <div class="left">
+    <img src="./img/keyboard.JPG">
     <h3>I could be broke and keep a million dollar smile</h3>
     <p>Now mama girl you got a friend that don't mind joining in. That's a hunnid fifty bottles in one night. But most of y'all don't get the picture less the flash is on.</p>
   </div>
 
-  <div class="right clearfix">
-    <div class="headphones_section clearfix">
-      <div id="headphones_picture" class="clearfix"><img src="../img/laptop.jpg"></div>
-      <div id="text" class="clearfix">
+  <div class="right">
+    <div class="section">
+      <div class="picture">
+        <img src="./img/laptop.jpg"></div>
+      <div class="text">
         <h3>It's 3008 I'm tryna paint a picture</h3>
         <p>They got money that they jumping on the pole to make. Bout a week agoooo. But most of y'all don't get the picture less the flash is on.</p>
       </div>
     </div>
 
-    <div class="laptop_section clearfix">
-      <div id="laptop_picture" class="clearfix"><img src="./img/desk.jpg/"></div>
-      <div id="text" class="clearfix">
+    <div class="section">
+      <div class="picture">
+        <img src="./img/desk.jpg"></div>
+      <div class="text">
         <h3>I'm going, going back, back to the Bay</h3>
         <p>She gon be upset if she keeps scrolling to the left. I might cause a cold front if I take a deep breath.</p>
       </div>
     </div>
 
-    <div class="window_section clearfix">
-      <div id="window_picture" class="clearfix"><img src="./window.jpg"></div>
-      <div id="text" class="clearfix">
+    <div class="section">
+      <div class="picture">
+        <img src="./img/window.jpg"></div>
+      <div class="text">
         <h3>All I do is cash out</h3>
         <p>A lot of fools puttin salt in the game til these women get the notion that they runnin the game. I got you paying my bills and buying automobiles.</p>
       </div>
@@ -44,4 +49,5 @@
   </div>
 
 </main>
+<body>
 </html>
